--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -5,17 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=natosans:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>BKP Nepal | Life Changing Platform </title>
 </head>
 
-<body class="bg-[#fff] font-natosans antialiased text-gray-700">
+<body class="bg-gray-200 font-natosans antialiased text-gray-600">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
@@ -28,7 +24,7 @@
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
-          <li><a class="btn bg-brand text-white" href="register.html">Register</a></li>
+          <li><a class="btn bg-brand text-white ml-4" href="register.html">Register</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -42,7 +38,7 @@
     <!-- mobile off canvas side nav -->
     <div
       class="mobile-side-nav fixed z-20 w-full h-screen top-0 left-0 bg-white transition-transform delay-100 -translate-x-full">
-      <div class="h-12 p-6 flex justify-between items-center">
+      <div class="h-16 p-8 bg-gray-100 flex justify-between items-center">
         <svg width="140" height="30" viewBox="0 0 197 30" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M105.12 0.845541C105.325 0.834492 105.53 0.866875 105.722 0.940577C105.914 1.01428 106.089 1.12764 106.234 1.27326C106.373 1.41869 106.481 1.59037 106.553 1.77825C106.625 1.96612 106.658 2.16643 106.651 2.36742V27.9709C106.663 28.1977 106.627 28.4244 106.546 28.6367C106.465 28.849 106.342 29.0425 106.183 29.2049C106.025 29.3673 105.834 29.4953 105.624 29.5808C105.413 29.6662 105.188 29.7074 104.96 29.7016C104.705 29.7035 104.452 29.6562 104.214 29.5624C103.991 29.4811 103.793 29.3441 103.638 29.1645L85.9917 5.83891L86.8173 5.34156V28.2195C86.8243 28.4214 86.79 28.6227 86.7164 28.8108C86.6429 28.999 86.5316 29.1701 86.3895 29.3137C86.2396 29.4584 86.0616 29.5709 85.8667 29.6445C85.6717 29.718 85.4638 29.751 85.2556 29.7414C85.0566 29.7493 84.8581 29.7153 84.673 29.6417C84.488 29.568 84.3205 29.4562 84.1813 29.3137C84.0442 29.1675 83.9375 28.9954 83.8675 28.8076C83.7975 28.6197 83.7655 28.4199 83.7735 28.2195V2.49673C83.7575 2.27105 83.7911 2.0446 83.8718 1.83325C83.9526 1.62191 84.0786 1.43078 84.241 1.27326C84.5442 0.97768 84.9515 0.813312 85.375 0.815699C85.6373 0.818042 85.8969 0.868619 86.1409 0.964904C86.3772 1.0463 86.5847 1.19496 86.7377 1.39262L104.135 24.3999L103.598 25.0564V2.37737C103.591 2.17547 103.625 1.97426 103.699 1.7861C103.772 1.59794 103.883 1.42681 104.025 1.28321C104.169 1.14072 104.34 1.02856 104.528 0.953382C104.716 0.878202 104.917 0.841529 105.12 0.845541Z"
@@ -112,24 +108,7 @@
           </svg>
           <span>Action Plan</span>
         </a>
-        <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
-          href="membership-type.html">
-          <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M14.2145 3.57139C14.1098 5.02387 13.0323 6.14278 11.8573 6.14278C10.6824 6.14278 9.60309 5.02423 9.50023 3.57139C9.39309 2.06034 10.442 1 11.8573 1C13.2727 1 14.3216 2.08784 14.2145 3.57139Z"
-              stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M11.8574 8.42846C9.52989 8.42846 7.29171 9.58451 6.73101 11.8359C6.65672 12.1338 6.84351 12.4284 7.14957 12.4284H16.5655C16.8716 12.4284 17.0573 12.1338 16.9841 11.8359C16.4234 9.54844 14.1852 8.42846 11.8574 8.42846Z"
-              stroke-width="2" stroke-miterlimit="10" />
-            <path
-              d="M7.00028 4.21209C6.91671 5.37207 6.04601 6.28563 5.10746 6.28563C4.1689 6.28563 3.29677 5.37243 3.21463 4.21209C3.12928 3.00532 3.97676 2.14284 5.10746 2.14284C6.23815 2.14284 7.08564 3.02747 7.00028 4.21209Z"
-              stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M7.21454 8.49989C6.56991 8.20454 5.85992 8.09097 5.10743 8.09097C3.25031 8.09097 1.46106 9.01417 1.01285 10.8124C0.953921 11.0502 1.1032 11.2856 1.34749 11.2856H5.35743"
-              stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" />
-          </svg>
-          <span>Register</span>
-        </a>
+
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
           href="upcoming-projects.html">
           <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -177,6 +156,34 @@
           </svg>
           <span>Contact Us</span>
         </a>
+        <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
+        href="login.html">
+        <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M9.48816 2.48816C9.80072 2.17559 10.2246 2 10.6667 2H21.3333C21.7754 2 22.1993 2.17559 22.5118 2.48816C22.8244 2.80072 23 3.22464 23 3.66667V19.6667C23 20.1087 22.8244 20.5326 22.5118 20.8452C22.1993 21.1577 21.7754 21.3333 21.3333 21.3333H11.2C10.7124 21.3333 10.1252 21.1261 9.6645 20.7651C9.19995 20.4011 9 19.9965 9 19.6667V17C9 16.4477 8.55229 16 8 16C7.44772 16 7 16.4477 7 17V19.6667C7 20.8095 7.66372 21.7382 8.431 22.3394C9.2021 22.9436 10.215 23.3333 11.2 23.3333H21.3333C22.3058 23.3333 23.2384 22.947 23.9261 22.2594C24.6137 21.5718 25 20.6391 25 19.6667V3.66667C25 2.69421 24.6137 1.76158 23.9261 1.07394C23.2384 0.386308 22.3058 0 21.3333 0H10.6667C9.69421 0 8.76158 0.386308 8.07394 1.07394C7.38631 1.76158 7 2.69421 7 3.66667V6.33333C7 6.88562 7.44772 7.33333 8 7.33333C8.55229 7.33333 9 6.88562 9 6.33333V3.66667C9 3.22464 9.17559 2.80072 9.48816 2.48816ZM13.2627 6.29289C12.9767 6.00689 12.5465 5.92134 12.1729 6.07612C11.7992 6.2309 11.5556 6.59554 11.5556 7V10.4444H1C0.447715 10.4444 0 10.8922 0 11.4444C0 11.9967 0.447715 12.4444 1 12.4444H11.5556V15.8889C11.5556 16.2934 11.7992 16.658 12.1729 16.8128C12.5465 16.9675 12.9767 16.882 13.2627 16.596L17.7071 12.1516C18.0976 11.761 18.0976 11.1279 17.7071 10.7373L13.2627 6.29289ZM13.5556 13.4747V12.4444H14.5858L13.5556 13.4747ZM13.5556 10.4444H14.5858L13.5556 9.41421V10.4444Z"
+            fill="#686868" />
+        </svg>
+
+        <span>Login</span>
+      </a>
+      <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
+        href="register.html">
+        <svg class="h-6 w-6 stroke-black-700" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M14.2145 3.57139C14.1098 5.02387 13.0323 6.14278 11.8573 6.14278C10.6824 6.14278 9.60309 5.02423 9.50023 3.57139C9.39309 2.06034 10.442 1 11.8573 1C13.2727 1 14.3216 2.08784 14.2145 3.57139Z"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+          <path
+            d="M11.8574 8.42846C9.52989 8.42846 7.29171 9.58451 6.73101 11.8359C6.65672 12.1338 6.84351 12.4284 7.14957 12.4284H16.5655C16.8716 12.4284 17.0573 12.1338 16.9841 11.8359C16.4234 9.54844 14.1852 8.42846 11.8574 8.42846Z"
+            stroke-width="2" stroke-miterlimit="10" />
+          <path
+            d="M7.00028 4.21209C6.91671 5.37207 6.04601 6.28563 5.10746 6.28563C4.1689 6.28563 3.29677 5.37243 3.21463 4.21209C3.12928 3.00532 3.97676 2.14284 5.10746 2.14284C6.23815 2.14284 7.08564 3.02747 7.00028 4.21209Z"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+          <path
+            d="M7.21454 8.49989C6.56991 8.20454 5.85992 8.09097 5.10743 8.09097C3.25031 8.09097 1.46106 9.01417 1.01285 10.8124C0.953921 11.0502 1.1032 11.2856 1.34749 11.2856H5.35743"
+            stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" />
+        </svg>
+        <span>Register</span>
+      </a>
       </nav>
     </div>
     <!-- end mobile off canvas side nav -->
