--- a/public/index.html
+++ b/public/index.html
@@ -191,13 +191,13 @@
   <!-- hero section -->
   <section class="w-full bg-[url('../images/hero.jpg')] bg-fixed bg-no-repeat bg-cover overflow-hidden">
     <div class="w-full min-h-[100vh] bg-black bg-opacity-80 flex flex-col justify-center items-center ">
-      <h1
+      <h1 data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="200"
         class="mt-8 px-2 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-5xl md:text-6xl font-natosans font-black md:max-w-xl"
         style="line-height: 1.2;">जीवन बदल्ने साझा
         मंचमा हजुरलाई स्वागत छ।</h1>
-      <div class="mt-6">
+      <div class="mt-6" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="100">
         <a href="register.html"
-          class="text-white text-md md:text-2xl bg-brand  hover:bg-brand-800 mt-6 md:mt-8 px-6 py-3 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
+          class="text-white uppercase  md:text-xl bg-brand  hover:bg-brand-800 mt-6 md:mt-8 px-6 py-3 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
           a member
         </a>
       </div>
@@ -206,12 +206,12 @@
   <!-- end of hero section -->
 
   <!-- start of why choose bkp nepal -->
-  <section class="bg-black-50">
+  <section class="">
     <div class="max-w-5xl mx-auto px-8 py-16 md:py-24">
       <h3 class="text-3xl font-bold py-2">Why Choose BKP Nepal?</h3>
       <div class="grid md:grid-cols-4 gap-8 mt-10 content-center">
         <div class="bg-white relative shadow px-8 py-8 rounded-md " data-aos="slide-up">
-          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-400"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
               d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
@@ -224,7 +224,7 @@
 
         </div>
         <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="200">
-          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-400"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
               d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
@@ -236,7 +236,7 @@
           </div>
         </div>
         <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="300">
-          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-400"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
               d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
@@ -248,7 +248,7 @@
           </div>
         </div>
         <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="400">
-          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-400"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
               d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
@@ -284,7 +284,7 @@
     <div class="section text-sm overflow-hidden" data-aos="fade-in">
       <h3 class="text-3xl font-semibold">हाम्रो मन्त्र</h3>
       <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold overflow-hidden">
-        <div class="bg-white p-4 rounded-lg shadow-sm hover:shadow-lg flex flex-col justify-center items-center"
+        <div class="bg-white p-4 rounded-lg shadow-sm hover:shadow-xl flex flex-col justify-center items-center"
           data-aos="slide-up" data-aos-delay="100">
           <img loading="lazy" class="h-16" src="images/teamwork.png" alt="teamwork">
           <p class=" py-2">Team Work</p>
@@ -306,9 +306,9 @@
   </section>
   <!-- end of hamro mantra -->
   <!-- mission vision goal section -->
-  <section class="bg-black-50">
+  <section class="bg-gray-100">
     <div
-      class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16 md:py-24  bg-black-50">
+      class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16 md:py-24">
       <div class="card bg-white rounded-lg hover:shadow-lg" data-aos="slide-up" data-aos-delay="100">
         <div class="px-4 py-4 space-y-2">
           <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Vision</h3>
@@ -341,7 +341,7 @@
   <!-- footer section start -->
   <section class="pt-4 h-auto bg-black text-gray-300">
     <footer
-      class="max-w-5xl mx-auto  px-6 py-8 text-black-200 md:flex flex-wrap gap-4 flex-row justify-between items-start">
+      class="max-w-5xl mx-auto px-6 py-8 text-black-200 md:flex flex-wrap md:gap-4 flex-row justify-between items-start">
       <div>
         <svg class="w-[140px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 39.6">
           <defs>
@@ -415,13 +415,13 @@
           </address>
         </div>
         <div class="mt-8 mb-4">
-          <a class="btn bg-brand mt-4 py-3 text-lg" href="register.html">Become a member</a>
+          <a class="btn bg-brand mt-4 py-3 text-md uppercase" href="register.html">Become a member</a>
         </div>
       </div>
 
       <!-- footer sitemap -->
       <div class="py-6 md:py-0">
-        <h3 class="text-xl text-gray-100">Sitemaps</h3>
+        <h3 class="text-xl text-gray-100">Menus</h3>
         <ul class="space-y-2 pt-4 text-gray-500 text-lg">
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
           </li>
@@ -475,7 +475,7 @@
         </div>
 
         <!-- newsletter signup form -->
-        <div class="mt-6">
+        <div class="my-6">
           <h3 class="text-gray-100 mb-2 text-xl">Newsletter Signup</h3>
           <div>
             <input
@@ -491,7 +491,7 @@
 
     </footer>
     <!-- copyright section -->
-    <div class="w-full px-6 bg-black-dark text-black-100 md:text-center py-6">
+    <div class="w-full px-6 bg-black-dark text-gray-600 md:text-center py-6">
       <p class="mb-2">&copy Copyright <span>Bishwokarma Trading and Promotors Pvt. ltd.</span> ,
         All Rights Reserved.</p>
       <span>
