--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -194,9 +194,9 @@
     <div class="mx-auto max-w-4xl py-16 px-6">
       <h3 class="my-6 pb-4 text-3xl font-semibold">कार्य योजना</h3>
       <div class="grid gap-8 md:grid-cols-3">
-        <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
+        <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow" >
           <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="100">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
               fill="#1FC604" />
@@ -210,7 +210,7 @@
         </div>
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
           <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="200">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
               fill="#1FC604" />
@@ -224,7 +224,7 @@
         </div>
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
           <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="300">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
               fill="#1FC604" />
@@ -243,8 +243,8 @@
   <div class="bg-gray-100 space-y-6">
     <section class="bg-gray-100" id="punji">
       <div class="bg-white max-w-5xl mx-auto grid md:grid-cols-2">
-        <div class="hidden sm:flex justify-center bg-[url('../images/punji-bridhi.png')] bg-cover bg-center">
-          <!-- <img loading="lazy" class="object-cover" src="images/punji-bridhi.png" alt="punji bridhi"> -->
+        <div class="hidden sm:flex justify-center " data-aos="slide-right" data-aos-easing="ease-in-out" data-aos-delay="100">
+          <img loading="lazy" class="object-cover object-center" src="images/punji-bridhi.png" alt="punji bridhi">
         </div>
         <div class="font-natosans p-6">
           <h4 class="mb-4 text-2xl font-semibold">पुंजि वृद्धि</h4>
@@ -351,7 +351,7 @@
     </section>
     <section class="bg-gray-100" id="bypar">
       <div class="bg-white max-w-5xl mx-auto grid md:grid-cols-2">
-        <div class="order-2 hidden sm:flex justify-center">
+        <div class="order-2 hidden sm:flex justify-center" data-aos="slide-left" data-aos-easing="ease-in-out" data-aos-delay="100">
           <img loading="lazy" class="object-cover object-right-top" src="images/bypar.png" alt="punji bridhi">
         </div>
         <div class="font-natosans p-6">
@@ -456,7 +456,7 @@
     </section>
     <section class="bg-gray-100" id="pariyojana">
       <div class="bg-white max-w-5xl mx-auto grid md:grid-cols-2">
-        <div class="hidden sm:flex">
+        <div class="hidden sm:flex" data-aos="slide-right" data-aos-easing="ease-in-out" data-aos-delay="100">
           <img loading="lazy" class="object-cover object-center" src="images/pariyojana.png" alt="punji bridhi">
         </div>
         <div class="font-natosans p-6 flex justify-center flex-col">
@@ -722,9 +722,7 @@
   <script src="js/main.js" type="module"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init({
-      offset: 120,
-    });
+    AOS.init();
   </script>
 
 </body>
