--- a/public/upcoming-projects.html
+++ b/public/upcoming-projects.html
@@ -193,63 +193,63 @@
     <div class="max-w-5xl mx-auto bg-white p-8 pb-16 text-xl shadow">
       <h3 class="font-semibold text-3xl my-8 pb-4">भावी परियोजना</h3>
       <div class="grid gap-6 md:grid-cols-3">
-        <div
-          class=" h-60 transition duration-500 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('https://images.unsplash.com/photo-1540340061722-9293d5163008?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="50"
+          class=" h-60 transition duration-500 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('../images/bkp-store.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img class="" src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Store</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('https://images.unsplash.com/photo-1576181456177-2b99ac0aa1ef?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="100"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('../images/bkp-agro.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Agro</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('https://images.unsplash.com/photo-1550666253-d6649814e4bf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('../images/bkp-infosys.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Infosys</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('https://images.unsplash.com/photo-1594709286069-f1d05fd0dd44?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="300"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('../images/bkp-jewellery.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Jewellers</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('https://images.unsplash.com/photo-1509966756634-9c23dd6e6815?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=476&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="400"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('../images/bkp-developers.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Developers</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('https://images.unsplash.com/photo-1629096193181-89aa83f523cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=528&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="500"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl  overflow-hidden bg-[url('../images/bkp-entertainment.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Entertainments</span>
           </div>
         </div>
-        <div
-          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('https://images.unsplash.com/photo-1617906681842-94a418bb88f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80')] bg-cover bg-center">
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="600"
+          class="h-60 transition duration-300 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('../images/bkp-industries.jpg')] bg-cover bg-center">
           <div
             class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
             <img src="images/bkp-icon.svg" alt="bkp logo icon" srcset="">
             <span class="text-white text-2xl tracking-widest">Industries</span>
           </div>
         </div>
-        <div
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="700"
           class="h-60 border-4 border-dashed border-black-500  transition duration-300 ease-in-out rounded flex flex-col justify-center items-center">
           <a href="about.html"
             class="flex flex-col text-center bg-black-800 transition duration-300 ease-in-out py-2 px-8 text-white hover:bg-brand rounded">
@@ -257,7 +257,7 @@
             <span>About us</span>
           </a>
         </div>
-        <div
+        <div data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="800"
           class="h-60 border-4 border-dashed border-black-500  transition duration-300 ease-in-out rounded flex flex-col justify-center items-center">
           <a href="#"
             class="flex flex-col text-center bg-black-800 transition duration-300 ease-in-out py-2 px-8 text-white hover:bg-brand rounded">
