--- a/public/contact.html
+++ b/public/contact.html
@@ -193,9 +193,9 @@
     <!-- end mobile off canvas side nav -->
   </div>
 
-  <section class="pt-32 pb-16 bg-gray-100">
-    <main class="max-w-3xl mx-auto grid sm:grid-cols-6 gap-8 p-8 min-h-96 bg-white rounded-md shadow">
-      <div
+  <section class="pt-32 pb-16 bg-gray-100" >
+    <main class="max-w-3xl mx-auto grid sm:grid-cols-6 gap-8 p-8 min-h-96 bg-white rounded-md shadow" data-aos="zoom-in" data-aos-delay="100">
+      <div 
         class="sm:col-span-3 text-black-700 bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-between">
         <h2 class="text-2xl mb-4 sm:mb-0 font-semibold">We love to hear <br>from you</h2>
         <div class="text-gray-700">
