--- a/public/register.html
+++ b/public/register.html
@@ -252,7 +252,7 @@
                             <span>Last Name</span>
                             <input class="input mb-2" type="text" name="last-name" id="last-name">
                         </label>
-                        <div class="flex gap-4 mb-2">
+                        <div class="flex flex-col md:flex-row gap-4 mb-2">
                             <label class="mb-2 block" for="dob">
                                 <span>Date of Birth ( B.S ) (eg. 2046-01-2) </span>
                                 <input class="input" type="text" name="dob" id="dob">
@@ -357,7 +357,7 @@
                                     value=" false">
                             </label>
                         </div>
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span>Province</span>
                                 <select class="input" name="PermanentProvinceId" id="PermanentProvinceId">
@@ -389,7 +389,7 @@
                                 </select>
                             </lable>
                         </div>
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-6">
                             <lable class="mb-2 block">
                                 <span> Municipality/RM:</span>
                                 <select class="input" name="PermanentMunicipalityTypeId"
@@ -408,7 +408,7 @@
                             </lable>
                         </div>
 
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span>Ward Number:</span>
                                 <input type="text" id="PermanentWardNumber" name="PermanentWardNumber"
@@ -437,7 +437,7 @@
                                     value=" false">
                             </label>
                         </div>
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span>Province</span>
                                 <select class="input" name="PermanentProvinceId" id="PermanentProvinceId">
@@ -469,7 +469,7 @@
                                 </select>
                             </lable>
                         </div>
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span> Municipality/RM:</span>
                                 <select class="input" name="PermanentMunicipalityTypeId"
@@ -488,7 +488,7 @@
                             </lable>
                         </div>
 
-                        <div class="grid grid-cols-2 gap-6">
+                        <div class="grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span>Ward Number:</span>
                                 <input type="text" id="PermanentWardNumber" name="PermanentWardNumber"
@@ -536,7 +536,7 @@
                         <span class="py-1 pl-3 pr-10 -mr-10 bg-gray-200 rounded-full shadow">Step 4 of 7</span>
                     </div>
                     <form class="space-y-2 flex flex-col">
-                        <div class="md:grid md:grid-cols-2 md:gap-6">
+                        <div class="md:grid md:grid-cols-2 gap-2 md:gap-6">
                             <lable class="mb-2 block">
                                 <span>Occupation</span>
                                 <select class="input" name="OccupationId" id="OccupationId">
@@ -595,7 +595,7 @@
                         <span class="font-semibold text-2xl">Upload documents</span>
                         <span class="py-1 pl-3 pr-10 -mr-10 bg-gray-200 rounded-full shadow">Step 5 of 7</span>
                     </div>
-                    <p class="bg-amber-100 mb-4 px-2 w-fit rounded text-sm font-semibold border border-yellow-200">Note
+                    <p class="bg-amber-100 mb-4 px-2 w-fit rounded text-xs md:text-sm font-semibold border border-yellow-200">Note
                         : all
                         document must be in .jpg , .png or .jpeg format</p>
                     <form class="space-y-2 flex flex-col">
@@ -690,11 +690,11 @@
 
                 <div class="hidden step step-7">
                     <div class="flex justify-between py-4">
-                        <span class="font-semibold text-2xl">Registration Complete</span>
+                        <span class="font-semibold text-2xl">Complete</span>
                         <span class="py-1 pl-3 pr-10 -mr-10 bg-gray-200 rounded-full shadow">Step 7 of 7</span>
                     </div>
-                    <form class="flex  flex-col space-y-2 p-6 group  ">
-                        <div class="flex flex-col items-center justify-center rounded-md bg-gray-100 py-20 ">
+                    <form class="flex  flex-col space-y-2 p-6 ">
+                        <div class="flex flex-col items-center justify-center rounded-md bg-gray-100 py-20 " >
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 fill-green-500" viewBox="0 0 20 20"
                                 fill="currentColor">
                                 <path fill-rule="evenodd"
@@ -733,7 +733,7 @@
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M23.616 4.79701C23.2761 4.60285 22.8914 4.50073 22.5 4.50073C22.1086 4.50073 21.7239 4.60285 21.384 4.79701L5.634 13.797C5.20351 14.0433 4.86645 14.4249 4.67523 14.8825C4.48401 15.3401 4.44934 15.8481 4.57662 16.3274C4.7039 16.8068 4.98599 17.2306 5.37903 17.5331C5.77208 17.8356 6.25404 17.9997 6.75 18V33.75C6.15326 33.75 5.58097 33.9871 5.15901 34.409C4.73705 34.831 4.5 35.4033 4.5 36C4.5 36.5967 4.73705 37.169 5.15901 37.591C5.58097 38.013 6.15326 38.25 6.75 38.25H38.25C38.8467 38.25 39.419 38.013 39.841 37.591C40.2629 37.169 40.5 36.5967 40.5 36C40.5 35.4033 40.2629 34.831 39.841 34.409C39.419 33.9871 38.8467 33.75 38.25 33.75V18C38.746 17.9997 39.2279 17.8356 39.621 17.5331C40.014 17.2306 40.2961 16.8068 40.4234 16.3274C40.5507 15.8481 40.516 15.3401 40.3248 14.8825C40.1335 14.4249 39.7965 14.0433 39.366 13.797L23.616 4.79701V4.79701ZM13.5 20.25C12.9033 20.25 12.331 20.4871 11.909 20.909C11.4871 21.331 11.25 21.9033 11.25 22.5V29.25C11.25 29.8467 11.4871 30.419 11.909 30.841C12.331 31.263 12.9033 31.5 13.5 31.5C14.0967 31.5 14.669 31.263 15.091 30.841C15.5129 30.419 15.75 29.8467 15.75 29.25V22.5C15.75 21.9033 15.5129 21.331 15.091 20.909C14.669 20.4871 14.0967 20.25 13.5 20.25ZM20.25 22.5C20.25 21.9033 20.4871 21.331 20.909 20.909C21.331 20.4871 21.9033 20.25 22.5 20.25C23.0967 20.25 23.669 20.4871 24.091 20.909C24.5129 21.331 24.75 21.9033 24.75 22.5V29.25C24.75 29.8467 24.5129 30.419 24.091 30.841C23.669 31.263 23.0967 31.5 22.5 31.5C21.9033 31.5 21.331 31.263 20.909 30.841C20.4871 30.419 20.25 29.8467 20.25 29.25V22.5ZM31.5 20.25C30.9033 20.25 30.331 20.4871 29.909 20.909C29.4871 21.331 29.25 21.9033 29.25 22.5V29.25C29.25 29.8467 29.4871 30.419 29.909 30.841C30.331 31.263 30.9033 31.5 31.5 31.5C32.0967 31.5 32.669 31.263 33.091 30.841C33.5129 30.419 33.75 29.8467 33.75 29.25V22.5C33.75 21.9033 33.5129 21.331 33.091 20.909C32.669 20.4871 32.0967 20.25 31.5 20.25Z" />
                         </svg>
-                        <h4 class="font-bold">Bank Details</h4>
+                        <h4 class="font-bold text-xl">Bank Details</h4>
                     </div>
                     <ul class="py-4 space-y-2 text-sm">
                         <li class="font-bold">Agricultural Development Bank Ltd.</li>
@@ -745,7 +745,7 @@
                         <li>Branch : Butwal</li>
                     </ul>
                 </div>
-                <ul class="hidden sm:block  py-4 space-y-6">
+                <ul class="hidden sm:block  py-4 space-y-6 text-sm">
                     <li class="flex items-center space-x-4 font-semibold">
                         <span
                             class="step-indicator-icon flex items-center justify-center h-8 w-8 rounded-full bg-green-500 text-white">1</span>
