--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -195,7 +195,7 @@
       <h3 class="my-6 pb-4 text-3xl font-semibold">कार्य योजना</h3>
       <div class="grid gap-8 md:grid-cols-3">
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow" >
-          <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
+          <svg class="absolute h-12 w-12 -top-3 -left-3" width="32" viewBox="0 0 82 82" fill="none"
             xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="100">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
@@ -209,7 +209,7 @@
           </a>
         </div>
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
-          <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
+          <svg class="absolute h-12 w-12 -top-3 -left-3" width="32" viewBox="0 0 82 82" fill="none"
             xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="200">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
@@ -223,7 +223,7 @@
           </a>
         </div>
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
-          <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
+          <svg class="h-12 w-12 absolute -top-3 -left-3"  viewBox="0 0 82 82" fill="none"
             xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="300">
             <path
               d="M82 41C82 63.6437 63.6437 82 41 82C18.3563 82 0 63.6437 0 41C0 18.3563 18.3563 0 41 0C63.6437 0 82 18.3563 82 41Z"
@@ -544,12 +544,10 @@
   </div>
 
 
-
-
   <!-- footer section start -->
-  <section class="pt-4 h-auto bg-black">
+  <section class="pt-4 h-auto bg-black text-gray-300">
     <footer
-      class="max-w-5xl mx-auto  px-6 py-8 text-black-100 md:flex flex-wrap gap-4 flex-row justify-between items-start">
+      class="max-w-5xl mx-auto px-6 py-8 text-black-200 md:flex flex-wrap md:gap-4 flex-row justify-between items-start">
       <div>
         <svg class="w-[140px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 39.6">
           <defs>
@@ -592,7 +590,7 @@
           </path>
         </svg>
         <div class="pt-6">
-          <address class="space-y-2 not-italic text-lg ">
+          <address class="space-y-2 not-italic text-lg text-gray-500">
             <p class="flex space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
@@ -622,21 +620,20 @@
             </p>
           </address>
         </div>
-        <div class="mt-6">
-          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        <div class="mt-8 mb-4">
+          <a class="btn bg-brand mt-4 py-3 text-md uppercase" href="register.html">Become a member</a>
         </div>
       </div>
 
       <!-- footer sitemap -->
       <div class="py-6 md:py-0">
-        <h3 class="text-xl text-brand-500">Sitemaps</h3>
-        <ul class="space-y-2 pt-4 text-black-100 text-lg">
+        <h3 class="text-xl text-gray-100">Menus</h3>
+        <ul class="space-y-2 pt-4 text-gray-500 text-lg">
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
           </li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="action-plan.html">Action
               Plan</a></li>
-
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="upcoming-projects.html">Upcoming
               Projects</a></li>
@@ -656,7 +653,7 @@
 
       <!-- connect with us -->
       <div class="">
-        <h3 class="text-brand-500 text-xl">Follow us</h3>
+        <h3 class="text-gray-100 text-xl">Follow us</h3>
         <div class="flex space-x-4 mt-4 items-center">
           <!-- faccebook icon -->
           <a href="#" target="_blank">
@@ -684,8 +681,8 @@
         </div>
 
         <!-- newsletter signup form -->
-        <div class="mt-6">
-          <h3 class="text-brand-500 mb-2 text-xl">Newsletter Signup</h3>
+        <div class="my-6">
+          <h3 class="text-gray-100 mb-2 text-xl">Newsletter Signup</h3>
           <div>
             <input
               class="rounded-sm bg-black-800 py-1 px-2 mr-2 focus:outline-none focus:ring-2 focus:ring-black-700 placeholder:text-sm"
@@ -700,7 +697,7 @@
 
     </footer>
     <!-- copyright section -->
-    <div class="w-full px-6 bg-black-dark text-black-100 md:text-center py-6">
+    <div class="w-full px-6 bg-black-dark text-gray-600 md:text-center py-6">
       <p class="mb-2">&copy Copyright <span>Bishwokarma Trading and Promotors Pvt. ltd.</span> ,
         All Rights Reserved.</p>
       <span>
@@ -722,9 +719,10 @@
   <script src="js/main.js" type="module"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({
+      offset: 100,
+    });
   </script>
 
 </body>
-
 </html>
