--- a/public/about.html
+++ b/public/about.html
@@ -250,9 +250,9 @@
   </section>
 
   <!-- footer section start -->
-  <section class="pt-4 h-auto bg-black">
+  <section class="pt-4 h-auto bg-black text-gray-300">
     <footer
-      class="max-w-5xl mx-auto  px-6 py-8 text-black-100 md:flex flex-wrap gap-4 flex-row justify-between items-start">
+      class="max-w-5xl mx-auto px-6 py-8 text-black-200 md:flex flex-wrap md:gap-4 flex-row justify-between items-start">
       <div>
         <svg class="w-[140px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 39.6">
           <defs>
@@ -295,7 +295,7 @@
           </path>
         </svg>
         <div class="pt-6">
-          <address class="space-y-2 not-italic text-lg ">
+          <address class="space-y-2 not-italic text-lg text-gray-500">
             <p class="flex space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
@@ -325,15 +325,15 @@
             </p>
           </address>
         </div>
-        <div class="mt-6">
-          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        <div class="mt-8 mb-4">
+          <a class="btn bg-brand mt-4 py-3 text-md uppercase" href="register.html">Become a member</a>
         </div>
       </div>
 
       <!-- footer sitemap -->
       <div class="py-6 md:py-0">
-        <h3 class="text-xl text-brand-500">Sitemaps</h3>
-        <ul class="space-y-2 pt-4 text-black-100 text-lg">
+        <h3 class="text-xl text-gray-100">Menus</h3>
+        <ul class="space-y-2 pt-4 text-gray-500 text-lg">
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
           </li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
@@ -358,7 +358,7 @@
 
       <!-- connect with us -->
       <div class="">
-        <h3 class="text-brand-500 text-xl">Follow us</h3>
+        <h3 class="text-gray-100 text-xl">Follow us</h3>
         <div class="flex space-x-4 mt-4 items-center">
           <!-- faccebook icon -->
           <a href="#" target="_blank">
@@ -386,8 +386,8 @@
         </div>
 
         <!-- newsletter signup form -->
-        <div class="mt-6">
-          <h3 class="text-brand-500 mb-2 text-xl">Newsletter Signup</h3>
+        <div class="my-6">
+          <h3 class="text-gray-100 mb-2 text-xl">Newsletter Signup</h3>
           <div>
             <input
               class="rounded-sm bg-black-800 py-1 px-2 mr-2 focus:outline-none focus:ring-2 focus:ring-black-700 placeholder:text-sm"
@@ -402,7 +402,7 @@
 
     </footer>
     <!-- copyright section -->
-    <div class="w-full px-6 bg-black-dark text-black-100 md:text-center py-6">
+    <div class="w-full px-6 bg-black-dark text-gray-600 md:text-center py-6">
       <p class="mb-2">&copy Copyright <span>Bishwokarma Trading and Promotors Pvt. ltd.</span> ,
         All Rights Reserved.</p>
       <span>
@@ -425,10 +425,9 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset: 120,
+      offset: 100,
     });
   </script>
 
 </body>
-
 </html>
