--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -241,7 +241,7 @@
   </section>
   <!-- end of karya -->
   <div class="bg-gray-100 space-y-6">
-    <section class="bg-gray-100" id="punji">
+    <section class="bg-gray-100 text-lg" id="punji">
       <div class="bg-white max-w-5xl mx-auto grid md:grid-cols-2">
         <div class="hidden sm:flex justify-center " data-aos="slide-right" data-aos-easing="ease-in-out" data-aos-delay="100">
           <img loading="lazy" class="object-cover object-center" src="images/punji-bridhi.png" alt="punji bridhi">
@@ -320,7 +320,7 @@
             </li>
 
           </ul>
-          <ul class="p-2 space-y-3 border border-gray-100 text-sm rounded hover:shadow">
+          <ul class="p-2 space-y-3 border border-gray-100 rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -356,7 +356,7 @@
         </div>
         <div class="font-natosans p-6">
           <h4 class="mb-4 text-2xl font-semibold">ब्यापार तथा ब्यावसाय वृद्धि</h4>
-          <ul class="p-2 mt-4 mb-4 space-y-3 border border-gray-100 rounded hover:shadow">
+          <ul class="p-2 mt-4 mb-4 text-lg space-y-3 border border-gray-100 rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -392,8 +392,8 @@
               </svg>
               <span>आर्थिक बर्ष ०८०-०८१ देखी BKP स्टोरका अन्य डिभिजन पनि क्रमश संचालनमा ल्याउने ।</span>
             </li>
-            <li class="ml-4">
-              <svg class="float-left mr-2" width="8" height="14" viewBox="0 0 8 14" fill="none"
+            <li class="flex ml-4">
+              <svg class="float-left mr-2" width="6" viewBox="0 0 8 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 13L7 7L1 1" stroke="black" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" />
@@ -401,8 +401,8 @@
 
               <span>BKP एग्रो एण्ड अर्गानिक स्टोर ।</span>
             </li>
-            <li class="ml-4">
-              <svg class="float-left mr-2" width="8" height="14" viewBox="0 0 8 14" fill="none"
+            <li class="flex ml-4">
+              <svg class="float-left mr-2" width="6"  viewBox="0 0 8 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 13L7 7L1 1" stroke="black" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" />
@@ -410,8 +410,8 @@
 
               <span>BKP फैशन एण्ड कस्मेटिक स्टोर ।</span>
             </li>
-            <li class="ml-4">
-              <svg class="float-left mr-2" width="8" height="14" viewBox="0 0 8 14" fill="none"
+            <li class="flex ml-4">
+              <svg class="float-left mr-2" width="6" viewBox="0 0 8 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 13L7 7L1 1" stroke="black" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" />
@@ -419,8 +419,8 @@
 
               <span>इलेक्ट्रोनिक्स स्टोर ।</span>
             </li>
-            <li class="ml-4">
-              <svg class="float-left mr-2" width="8" height="14" viewBox="0 0 8 14" fill="none"
+            <li class="flex ml-4">
+              <svg class="float-left mr-2" width="6" viewBox="0 0 8 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 13L7 7L1 1" stroke="black" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" />
@@ -429,13 +429,13 @@
               <span>फर्निचर तथा इण्टियर शोरुम।</span>
             </li>
             <li class="ml-4">
-              <svg class="float-left mr-2" width="8" height="14" viewBox="0 0 8 14" fill="none"
+              <svg class="float-left mr-2 mt-2" width="6"  viewBox="0 0 8 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 13L7 7L1 1" stroke="black" stroke-width="2" stroke-linecap="round"
                   stroke-linejoin="round" />
               </svg>
 
-              <span>हाड्वेर तथा शेनेटरी स्टोर ।<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;आदि इत्यादि ।</span>
+              <span>हाड्वेर तथा शेनेटरी स्टोर ।<br>&nbsp;&nbsp;&nbsp;&nbsp;आदि इत्यादि ।</span>
             </li>
             <li>
               <svg class="float-right mr-2 stroke-green-500" width="18" viewBox="0 0 22 22" fill="none"
@@ -461,7 +461,7 @@
         </div>
         <div class="font-natosans p-6 flex justify-center flex-col">
           <h4 class="mb-4 text-2xl font-semibold">परियोजना वृद्धि</h4>
-          <ul class="p-2 space-y-3 border border-gray-100  rounded hover:shadow">
+          <ul class="p-2 space-y-3 border border-gray-100 text-lg  rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -534,10 +534,10 @@
       </div>
     </section>
 
-    <div class="bg-brand-50 p-4 max-w-4xl mx-auto shadow rounded mb-16">
-      <p class="text-center text-small font-natosans">विविध उदेश्य तथा विशाल लक्ष्य र सपना भएको यस कंम्पनीमा जोडिन <a
+    <div class="bg-gray-50 mx-6 p-4 max-w-4xl sm:mx-auto shadow rounded mb-16">
+      <p class="text-center font-natosans">विविध उदेश्य तथा विशाल लक्ष्य र सपना भएको यस कंम्पनीमा जोडिन <a
           class="text-sky-500 underline font-bold" href="#">यहाँ क्लिक</a> गर्नुहोस् र महत्त्वपूर्ण सय जनाको सुचिमा
-        आफुलाई सुचिकृत गर्नुहोस् ।।</p>
+        आफुलाई सुचिकृत गर्नुहोस्।</p>
     </div>
     <div class="pb-12 bg-gray-100"></div>
 
