--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,10 @@
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
-          <li><a class="btn bg-brand font-semibold ml-4" href="register.html">Register</a></li>
+          <!-- <li><a class="btn bg-brand font-semibold ml-4" href="register.html">Register</a></li> -->
         </ul>
       </nav>
+      <a class="btn hidden lg:block bg-brand font-semibold ml-4" href="register.html">Register</a>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-black" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd"
@@ -192,7 +193,7 @@
   <section class="w-full bg-[url('../images/hero.jpg')] bg-fixed bg-no-repeat bg-cover overflow-hidden">
     <div class="w-full min-h-[100vh] bg-black bg-opacity-80 flex flex-col justify-center items-center ">
       <h1 data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-delay="200"
-        class="mt-8 px-2 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-5xl md:text-6xl font-natosans font-black md:max-w-xl"
+        class="mt-2 px-6 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-4xl md:text-6xl font-natosans font-black md:max-w-xl"
         style="line-height: 1.2;">जीवन बदल्ने साझा
         मंचमा हजुरलाई स्वागत छ।</h1>
       <div class="mt-6" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="100">
@@ -308,7 +309,7 @@
   <!-- mission vision goal section -->
   <section class="bg-gray-100">
     <div
-      class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16 md:py-24">
+      class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16">
       <div class="card bg-white rounded-lg hover:shadow-lg" data-aos="slide-up" data-aos-delay="100">
         <div class="px-4 py-4 space-y-2">
           <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Vision</h3>
@@ -384,24 +385,24 @@
           </path>
         </svg>
         <div class="pt-6">
-          <address class="space-y-2 not-italic text-lg text-gray-500">
-            <p class="flex space-x-4">
+          <address class="space-y-2 not-italic text-lg text-gray-500 ">
+            <p class="flex items-center space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
                   d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
                   clip-rule="evenodd"></path>
               </svg>
-              <span class="hover:text-brand-200">Butwal 11, Rupendahi</span>
+              <span class="hover:underline hover:text-white">Butwal 11, Rupendahi</span>
             </p>
-            <p class="flex space-x-4 hover:text-brand-200">
+            <p class="flex items-center space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
                 <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
               </svg>
-              <a class="hover:text-brand-200 underline"
+              <a class="hover:underline hover:text-white"
                 href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
             </p>
-            <p class="flex space-x-4">
+            <p class="flex items-center space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M14.414 7l3.293-3.293a1 1 0 00-1.414-1.414L13 5.586V4a1 1 0 10-2 0v4.003a.996.996 0 00.617.921A.997.997 0 0012 9h4a1 1 0 100-2h-1.586z">
@@ -410,7 +411,7 @@
                   d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z">
                 </path>
               </svg>
-              <a class="hover:text-brand-200 underline" href="tel:+9779857039526">+977-9857039526</a>
+              <a class="hover:text-white hover:underline text-[15px]" href="tel:+9779857039526">9857039526</a>
             </p>
           </address>
         </div>
@@ -423,23 +424,23 @@
       <div class="py-6 md:py-0">
         <h3 class="text-xl text-gray-100">Menus</h3>
         <ul class="space-y-2 pt-4 text-gray-500 text-lg">
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white " href="/">Home</a>
           </li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="action-plan.html">Action
               Plan</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="upcoming-projects.html">Upcoming
               Projects</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="about.html">About
               us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="contact.html">Contact
               us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="login.html">Login</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+          <li><a class="transition duration-100 ease-in hover:underline hover:text-white"
               href="register.html">Register</a></li>
         </ul>
       </div>
@@ -496,9 +497,9 @@
         All Rights Reserved.</p>
       <span>
         Designed :
-        <a href="https://deepin.com.np?src=bkpnepal" target="_blank">
+        <a href="https://deepin.com.np/web?src=bkpnepal" target="_blank">
           deepin.com.np
-          <svg class="w-4 h-4 inline-block stroke-brand-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          <svg class="w-4 h-4 inline-block stroke-brand" fill="none" stroke="currentColor" viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
