--- a/public/upcoming-projects.html
+++ b/public/upcoming-projects.html
@@ -4,8 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name='keywords' content='bkp nepal, a life changing platform, investment in nepal'>
+  <meta name='robots' content='index,follow'>
+  <meta name='author' content='Dipin Bishwakarma'>
+  <meta name='designer' content='Dipin Bishwakarma'>
+  <meta name='owner' content='Bishwokarma Trading and Promotors Pvt. ltd'>
+  <meta name='og:title' content='BKP Nepal'>
+  <meta name='fb:page_id' content=''>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>BKP Nepal | Life Changing Platform </title>
@@ -17,16 +23,17 @@
       <a class="w-[140px]" href="/">
         <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
       </a>
-      <nav class="hidden lg:block">
-        <ul class="flex items-center text-sm space-x-0 text-gray-800">
+      <nav class="hidden lg:block ">
+        <ul class="flex items-center text-sm space-x-0 text-gray-800 font-semibold">
           <li><a class="nav-links" href="/">Home</a></li>
           <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
-          <li><a class="btn bg-brand text-white ml-4" href="register.html">Register</a></li>
+          <!-- <li><a class="btn bg-brand font-semibold ml-4" href="register.html">Register</a></li> -->
         </ul>
       </nav>
+      <a class="btn hidden lg:block bg-brand shadow-lg shadow-brand hover:shadow-gray-800/50 font-semibold ml-4" href="register.html">Register</a>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-black" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd"
