--- a/public/register.html
+++ b/public/register.html
@@ -14,27 +14,27 @@
     <div class="fixed z-10 w-full bg-white px-6 shadow-md">
         <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
             <a class="w-[140px]" href="/">
-                <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
+              <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
             </a>
-            <nav class="hidden lg:block">
-                <ul class="flex items-center text-sm  space-x-0 text-gray-800">
-                    <li><a class="nav-links" href="/">Home</a></li>
-                    <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
-                    <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
-                    <li><a class="nav-links" href="about.html">About us</a></li>
-                    <li><a class="nav-links" href="contact.html">Contact us</a></li>
-                    <li><a class="btn bg-brand text-white ml-4" href="register.html">Register</a></li>
-                </ul>
+            <nav class="hidden lg:block ">
+              <ul class="flex items-center text-sm space-x-0 text-gray-800 font-semibold">
+                <li><a class="nav-links" href="/">Home</a></li>
+                <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
+                <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
+                <li><a class="nav-links" href="about.html">About us</a></li>
+                <li><a class="nav-links" href="contact.html">Contact us</a></li>
+                <!-- <li><a class="btn bg-brand font-semibold ml-4" href="register.html">Register</a></li> -->
+              </ul>
             </nav>
+            <a class="btn hidden lg:block bg-brand shadow-lg shadow-brand hover:shadow-gray-800/50 font-semibold ml-4" href="register.html">Register</a>
             <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-black" viewBox="0 0 20 20"
-                    fill="currentColor">
-                    <path fill-rule="evenodd"
-                        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
-                        clip-rule="evenodd" />
-                </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-black" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd"
+                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
+                  clip-rule="evenodd" />
+              </svg>
             </button>
-        </header>
+          </header>
         <!-- mobile off canvas side nav -->
         <div
             class="mobile-side-nav fixed z-20 w-full h-screen top-0 left-0 bg-white transition-transform delay-100 -translate-x-full">
